stages/stage2/k8s/infra/booking-db/booking-db-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-db
  namespace: apollo-airlines-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-db
  template:
    metadata:
      labels:
        app: booking-db
    spec:
      serviceAccountName: apollo11-infra
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "booking"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres", "-d", "booking"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: pg-data
          emptyDir: {}
