stages/stage2/k8s/infra/booking-db/booking-db-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-db
  namespace: apollo-airlines-infra
spec:
  clusterIP: None
  selector:
    app: booking-db
  ports:
    - port: 5432
      targetPort: 5432
